--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://nikson1701.github.io/gbCourse5Hw/",
   "name": "supa-dupa-chat",
   "version": "0.1.0",
   "private": true,
