--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^9.0.2",
+    "jest-fetch-mock": "^3.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "redux": "^4.1.1",
+    "redux-mock-store": "^1.5.4",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
+    "redux-saga-test-plan": "^4.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
